--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-    "redirects": [
+    "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "http://wallet-main.eba-ccwdurgr.us-east-1.elasticbeanstalk.com/",
-            "statusCode": 200
+            "destination": "http://wallet-main.eba-ccwdurgr.us-east-1.elasticbeanstalk.com/"
         }
     ]
 }
