--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,12 @@
 {
-    "redirects": [
+    "rewrites": [
         {
-            "source": "/api/(.*)",
-            "destination": "http://wallet-main.eba-ccwdurgr.us-east-1.elasticbeanstalk.com/",
-            "statusCode": 200
+            "source": "/api/:path(.*)",
+            "destination": "http://wallet-main.eba-ccwdurgr.us-east-1.elasticbeanstalk.com/:path"
         },
         {
             "source": "/(.*)",
-            "destination": "index.html",
-            "statusCode": 200
+            "destination": "/index.html"
         }
     ]
 }
